<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_open_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dimen5dp"
        android:padding="@dimen/dimen10dp"
        android:text="@string/open_in_browser"
        android:textColor="@color/dark_sky"
        app:drawableStartCompat="@drawable/ic_open_in_browser" />

    <TextView
        android:id="@+id/dialog_copy_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dimen5dp"
        android:padding="@dimen/dimen10dp"
        android:text="@string/copy"
        android:textColor="@color/dark_sky"
        app:drawableStartCompat="@drawable/ic_copy" />

    <TextView
        android:id="@+id/dialog_share_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dimen5dp"
        android:padding="@dimen/dimen10dp"
        android:text="@string/share"
        android:textColor="@color/dark_sky"
        app:drawableStartCompat="@drawable/ic_share" />
</LinearLayout>