<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinkFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/link_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/link_title"
            android:src="@drawable/ic_link" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/link_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/link_logo"
            android:layout_margin="@dimen/dimen5dp"
            android:hint="@string/link_title"
            app:hintTextColor="@color/sky">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/link_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/link_subtitle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/link_title_layout"
            android:layout_margin="@dimen/dimen5dp"
            android:hint="@string/link_subtitle"
            app:hintTextColor="@color/sky">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/link_subtitle_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/link_url_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/link_subtitle_layout"
            android:layout_margin="@dimen/dimen5dp"
            android:hint="@string/link_url"
            app:hintTextColor="@color/sky">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/link_url_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/folder_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link_url_layout"
            android:layout_margin="@dimen/dimen5dp"
            android:hint="@string/folder_name"
            app:hintTextColor="@color/sky">

            <AutoCompleteTextView
                android:id="@+id/folder_name_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/link_pinned_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/folder_name_layout"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:text="@string/pinned"
            android:textSize="@dimen/dimen18sp"
            app:thumbTint="@color/sky"
            app:trackTint="@color/grey" />
    </RelativeLayout>
</ScrollView>