<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.password.config.ConfigPasswordFragment">

    <ImageView
        android:id="@+id/password_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen200dp"
        android:contentDescription="@string/link_title"
        android:src="@drawable/ic_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_below="@id/password_logo"
        android:layout_margin="@dimen/dimen10dp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="5"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/enable_password_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:text="@string/enable_password"
        android:textSize="@dimen/dimen18sp"
        app:switchPadding="@dimen/dimen5dp"
        app:thumbTint="@color/sky"
        app:trackTint="@color/grey" />
</RelativeLayout>