<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.HomeFragment">

            <TextView
                android:id="@+id/folder_header_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen5dp"
                android:fontFamily="serif"
                android:padding="@dimen/dimen5dp"
                android:text="@string/top_folders"
                android:textColor="@color/sky"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/folder_next_img"
                android:layout_width="@dimen/dimen25dp"
                android:layout_height="@dimen/dimen25dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/next_folders"
                android:src="@drawable/ic_next_arrow" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/folder_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/folder_header_txt"
                tools:itemCount="3"
                tools:listitem="@layout/list_item_folder" />

            <TextView
                android:id="@+id/link_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/folder_list"
                android:layout_marginTop="@dimen/dimen5dp"
                android:layout_marginBottom="@dimen/dimen5dp"
                android:fontFamily="serif"
                android:padding="@dimen/dimen5dp"
                android:text="@string/links"
                android:textColor="@color/sky"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/links_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/folder_list"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dimen5dp"
                android:layout_marginEnd="@dimen/dimen5dp"
                android:layout_marginBottom="@dimen/dimen5dp"
                android:fontFamily="serif"
                android:padding="@dimen/dimen5dp"
                android:textColor="@color/sky"
                tools:text="0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/link_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/link_header"
                tools:listitem="@layout/list_item_link" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/link_empty_lottie"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen200dp"
                android:layout_below="@id/link_header"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/broken_link" />

            <TextView
                android:id="@+id/link_empty_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/link_empty_lottie"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/message_links_empty"
                android:textColor="@color/dark_sky"
                android:textSize="@dimen/dimen20sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_link_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_folder_option"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:contentDescription="@string/add_link_option"
        android:src="@drawable/ic_link"
        android:visibility="gone"
        app:backgroundTint="@color/dark_sky" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_folder_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/show_add_options"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dimen16dp"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:contentDescription="@string/add_folder_option"
        android:src="@drawable/ic_directory_blue"
        android:visibility="gone"
        app:backgroundTint="@color/dark_sky" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_add_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen16dp"
        android:contentDescription="@string/show_add_options"
        android:src="@drawable/ic_add"
        android:tint="@color/white"
        app:backgroundTint="@color/sky" />
</RelativeLayout>